[package]
name = "gossip-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = ["attributes"] }
bincode = "1.3.2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8.3"
futures = "0.3.15"
log = "0.4.0"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
